force-app/main/default/objects/Insolvency_Records__c/Insolvency_Records__c.object-meta.xml
<CustomObject>
    <label>Insolvency Record</label>
    <nameField>
        <displayFormat>IS-{0000000000}</displayFormat>
        <label>Insolvency Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insolvency Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>