force-app/main/default/objects/Insolvency_Records__c/fields/Amount_applicable_if_CCJ__c.field-meta.xml
<CustomField>
    <fullName>Amount_applicable_if_CCJ__c</fullName>
    <label>Amount (applicable if CCJ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>