force-app/main/default/objects/Insolvency_Records__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insolvency_Records</relationshipLabel>
    <relationshipName>Insolvency_Records</relationshipName>
    <type>Lookup</type>
</CustomField>