force-app/main/default/objects/Insolvency_Records__c/fields/Court_registered__c.field-meta.xml
<CustomField>
    <fullName>Court_registered__c</fullName>
    <label>Court Registered</label>
    <type>Date</type>
</CustomField>