force-app/main/default/objects/Insolvency_Records__c/fields/Date_of_bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Date_of_bankruptcy__c</fullName>
    <label>Date of Bankruptcy</label>
    <type>Date</type>
</CustomField>