force-app/main/default/objects/Insolvency_Records__c/fields/Date_of_discharge__c.field-meta.xml
<CustomField>
    <fullName>Date_of_discharge__c</fullName>
    <label>Date of Discharge</label>
    <type>Date</type>
</CustomField>