force-app/main/default/objects/Insolvency_Records__c/fields/Date_registered__c.field-meta.xml
<CustomField>
    <fullName>Date_registered__c</fullName>
    <label>Date Registered</label>
    <type>Date</type>
</CustomField>