force-app/main/default/objects/Insolvency_Records__c/fields/Date_satisfied__c.field-meta.xml
<CustomField>
    <fullName>Date_satisfied__c</fullName>
    <label>Date Satisfied</label>
    <type>Date</type>
</CustomField>