force-app/main/default/objects/Insolvency_Records__c/fields/Monthly_repayment_amount_DMP_IVA__c.field-meta.xml
<CustomField>
    <fullName>Monthly_repayment_amount_DMP_IVA__c</fullName>
    <label>Monthly Repayment Amount (if DMP, IVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>