force-app/main/default/objects/Insolvency_Records__c/fields/Mortgage_Case__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Case__c</fullName>
    <label>Mortgage Case</label>
    <referenceTo>Mortgage_Case__c</referenceTo>
    <relationshipLabel>Insolvency Records</relationshipLabel>
    <relationshipName>Insolvency_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>