force-app/main/default/objects/Insolvency_Records__c/fields/Record_type__c.field-meta.xml
<CustomField>
    <fullName>Record_type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCJ</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>IVA</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>